# top-news-sdk

./: AGENTS.md  CHANGELOG.md  CLAUDE.md  LICENSE  Makefile  README.md  SECURITY.md
.sdk/: package-lock.json  package.json
go/: AGENTS.md  CLAUDE.md  README.md  REFERENCE.md  go.mod  top-news.go
go-cli/: .gitignore  Makefile  README.md  go.mod  main.go  words.go
go-mcp/: .gitignore  Makefile  README.md  go.mod  main.go  tools.go
lua/: AGENTS.md  CLAUDE.md  README.md  REFERENCE.md  config.lua  features.lua  top-news.rockspec  top-news_sdk.lua  top-news_types.lua
php/: AGENTS.md  CLAUDE.md  LICENSE  README.md  REFERENCE.md  composer.json  (+3 more)
py/: AGENTS.md  CLAUDE.md  README.md  REFERENCE.md  config.py  features.py  pyproject.toml  topnews_sdk.py  topnews_types.py
py/core/: context.py  control.py  error.py  helpers.py  operation.py  result.py  utility_type.py
py/entity/: top_new_entity.py
py/feature/: audit_feature.py  base_feature.py  cache_feature.py  clienttrack_feature.py  netsim_feature.py  paging_feature.py  proxy_feature.py  retry_feature.py  telemetry_feature.py  test_feature.py  timeout_feature.py
py/test/: runner.py  test_exists.py  test_feature.py  test_netsim.py  test_pipeline.py  test_primary_utility.py  test_readme_examples.py  test_top_new_direct.py  test_top_new_entity.py
py/utility/: feature_hook.py  feature_init.py  make_error.py  make_options.py  make_point.py  make_request.py  make_result.py  make_spec.py  make_url.py  param.py  prepare_headers.py  prepare_method.py  prepare_query.py  transform_request.py  transform_response.py
(+408 files in other folders)
